--- a/electron_and_react/package.json
+++ b/electron_and_react/package.json
@@ -8,6 +8,7 @@
     "cross-env": "6.0.2",
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.8",
+    "electron-reload": "^1.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "update-electron-app": "^1.2.0",
