--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cross-env": "6.0.2",
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.8",
+    "electron-reload": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -19,7 +20,7 @@
     "electron": "6.0.11",
     "electron-builder": "^21.2.0",
     "prettier": "^1.4.4",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.4.0",
     "wait-on": "3.3.0"
   },
   "build": {
