--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "electron-is-dev": "1.1.0",
     "electron-log": "^3.0.8",
     "electron-reload": "^1.5.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "update-electron-app": "^1.2.0",
