--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "electron-is-dev": "1.1.0",
     "electron-log": "4.0.7",
     "electron-reload": "1.5.0",
+    "express": "^4.17.1",
     "prop-types": "15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "shelljs": "^0.8.3",
     "update-electron-app": "1.5.0",
     "yarn": "1.22.0"
   },
